--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/images/favicon.png" rel="icon" type="image/png" sizes="32x32" ><!--파비콘-->
     <title>부산 북 페스티벌</title>
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/slick.css" rel="stylesheet">
